// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configurations anchors.yml on FREE 1`] = `
Array [
  null,
  Object {
    "repos": Map {},
  },
]
`;

exports[`configurations anchors.yml on PAID 1`] = `
Array [
  null,
  Object {
    "repos": Map {},
  },
]
`;

exports[`configurations basic.yml on FREE 1`] = `
Array [
  null,
  Object {
    "repos": Map {
      "prisma-test-utils" => Object {
        "config": Object {
          "removeUnconfiguredLabels": true,
        },
        "labels": Map {
          "bug/0-needs-reproduction" => Object {
            "color": "#ff0022",
          },
          "bug/1-has-reproduction" => Object {
            "color": "#ff0022",
            "description": "Indicates that an issue has reproduction",
          },
          "bug/2-bug-confirmed" => Object {
            "color": "red",
          },
          "bug/3-fixing" => Object {
            "color": "00ff22",
            "description": "Indicates that we are working on fixing the issue.",
          },
        },
      },
    },
  },
]
`;

exports[`configurations basic.yml on PAID 1`] = `
Array [
  null,
  Object {
    "repos": Map {
      "prisma-test-utils" => Object {
        "config": Object {
          "removeUnconfiguredLabels": true,
        },
        "labels": Map {
          "bug/0-needs-reproduction" => Object {
            "color": "#ff0022",
          },
          "bug/1-has-reproduction" => Object {
            "color": "#ff0022",
            "description": "Indicates that an issue has reproduction",
          },
          "bug/2-bug-confirmed" => Object {
            "color": "red",
          },
          "bug/3-fixing" => Object {
            "color": "00ff22",
            "description": "Indicates that we are working on fixing the issue.",
          },
        },
      },
    },
  },
]
`;

exports[`configurations capitalization.yml on FREE 1`] = `
Array [
  null,
  Object {
    "repos": Map {
      "lowercase" => Object {
        "config": Object {
          "removeUnconfiguredLabels": true,
        },
        "labels": Map {
          "label" => Object {
            "color": "#ff0022",
          },
        },
      },
      "UPPERCASE" => Object {
        "config": Object {
          "removeUnconfiguredLabels": true,
        },
        "labels": Map {
          "label" => Object {
            "color": "#ff0022",
          },
        },
      },
      "mIxEd" => Object {
        "config": Object {
          "removeUnconfiguredLabels": true,
        },
        "labels": Map {
          "label" => Object {
            "color": "#ff0022",
          },
        },
      },
    },
  },
]
`;

exports[`configurations capitalization.yml on PAID 1`] = `
Array [
  null,
  Object {
    "repos": Map {
      "lowercase" => Object {
        "config": Object {
          "removeUnconfiguredLabels": true,
        },
        "labels": Map {
          "label" => Object {
            "color": "#ff0022",
          },
        },
      },
      "UPPERCASE" => Object {
        "config": Object {
          "removeUnconfiguredLabels": true,
        },
        "labels": Map {
          "label" => Object {
            "color": "#ff0022",
          },
        },
      },
      "mIxEd" => Object {
        "config": Object {
          "removeUnconfiguredLabels": true,
        },
        "labels": Map {
          "label" => Object {
            "color": "#ff0022",
          },
        },
      },
    },
  },
]
`;

exports[`configurations duplicate_aliases.yml on FREE 1`] = `
Array [
  null,
  Object {
    "repos": Map {
      "repo-one" => Object {
        "labels": Map {
          "label/1" => Object {
            "alias": Array [
              "alias",
            ],
            "color": "#ff0022",
          },
          "label/2" => Object {
            "color": "#ff0022",
          },
          "label/3" => Object {
            "color": "#ff0022",
          },
        },
      },
      "repo-two" => Object {
        "labels": Map {
          "label/4" => Object {
            "alias": Array [
              "alias",
            ],
            "color": "#ff0022",
          },
          "label/5" => Object {
            "alias": Array [
              "alias",
            ],
            "color": "#ff0022",
          },
        },
      },
    },
  },
]
`;

exports[`configurations duplicate_aliases.yml on PAID 1`] = `
Array [
  null,
  Object {
    "repos": Map {
      "repo-one" => Object {
        "labels": Map {
          "label/1" => Object {
            "alias": Array [
              "alias",
            ],
            "color": "#ff0022",
          },
          "label/2" => Object {
            "color": "#ff0022",
          },
          "label/3" => Object {
            "color": "#ff0022",
          },
        },
      },
      "repo-two" => Object {
        "labels": Map {
          "label/4" => Object {
            "alias": Array [
              "alias",
            ],
            "color": "#ff0022",
          },
          "label/5" => Object {
            "alias": Array [
              "alias",
            ],
            "color": "#ff0022",
          },
        },
      },
    },
  },
]
`;

exports[`configurations empty.yml on FREE 1`] = `
Array [
  null,
  Object {
    "repos": Map {},
  },
]
`;

exports[`configurations empty.yml on PAID 1`] = `
Array [
  null,
  Object {
    "repos": Map {},
  },
]
`;

exports[`configurations free.yml on FREE 1`] = `
Array [
  null,
  Object {
    "repos": Map {
      "prisma-test-utils" => Object {
        "labels": Map {
          "bug/0-needs-reproduction" => Object {
            "color": "#ff0022",
          },
        },
      },
      "label-sync" => Object {
        "labels": Map {
          "bug/0-needs-reproduction" => Object {
            "color": "#ff0022",
          },
        },
      },
      "unchanged" => Object {
        "labels": Map {
          "bug/0-needs-reproduction" => Object {
            "color": "#ff0022",
          },
        },
      },
      "notquitethere" => Object {
        "labels": Map {
          "bug/0-needs-reproduction" => Object {
            "color": "#ff0022",
          },
        },
      },
      "last-one" => Object {
        "labels": Map {
          "bug/0-needs-reproduction" => Object {
            "color": "#ff0022",
          },
        },
      },
      "overthetop" => Object {
        "labels": Map {
          "bug/0-needs-reproduction" => Object {
            "color": "#ff0022",
          },
        },
      },
    },
  },
]
`;

exports[`configurations free.yml on PAID 1`] = `
Array [
  null,
  Object {
    "repos": Map {
      "prisma-test-utils" => Object {
        "labels": Map {
          "bug/0-needs-reproduction" => Object {
            "color": "#ff0022",
          },
        },
      },
      "label-sync" => Object {
        "labels": Map {
          "bug/0-needs-reproduction" => Object {
            "color": "#ff0022",
          },
        },
      },
      "unchanged" => Object {
        "labels": Map {
          "bug/0-needs-reproduction" => Object {
            "color": "#ff0022",
          },
        },
      },
      "notquitethere" => Object {
        "labels": Map {
          "bug/0-needs-reproduction" => Object {
            "color": "#ff0022",
          },
        },
      },
      "last-one" => Object {
        "labels": Map {
          "bug/0-needs-reproduction" => Object {
            "color": "#ff0022",
          },
        },
      },
      "overthetop" => Object {
        "labels": Map {
          "bug/0-needs-reproduction" => Object {
            "color": "#ff0022",
          },
        },
      },
    },
  },
]
`;

exports[`configurations invalid.yml on FREE 1`] = `
Array [
  " * \`repos\`: Required",
]
`;

exports[`configurations invalid.yml on PAID 1`] = `
Array [
  " * \`repos\`: Required",
]
`;

exports[`configurations missing_siblings.yml on FREE 1`] = `
Array [
  null,
  Object {
    "repos": Map {
      "repo-one" => Object {
        "labels": Map {
          "label/1" => Object {
            "color": "#ff0022",
            "siblings": Array [
              "label/6",
              "label/7",
            ],
          },
          "label/2" => Object {
            "color": "#ff0022",
          },
          "label/3" => Object {
            "color": "#ff0022",
          },
        },
      },
      "repo-two" => Object {
        "labels": Map {
          "label/4" => Object {
            "color": "#ff0022",
            "siblings": Array [
              "label/8",
              "label/5",
            ],
          },
          "label/5" => Object {
            "color": "#ff0022",
          },
        },
      },
    },
  },
]
`;

exports[`configurations missing_siblings.yml on PAID 1`] = `
Array [
  null,
  Object {
    "repos": Map {
      "repo-one" => Object {
        "labels": Map {
          "label/1" => Object {
            "color": "#ff0022",
            "siblings": Array [
              "label/6",
              "label/7",
            ],
          },
          "label/2" => Object {
            "color": "#ff0022",
          },
          "label/3" => Object {
            "color": "#ff0022",
          },
        },
      },
      "repo-two" => Object {
        "labels": Map {
          "label/4" => Object {
            "color": "#ff0022",
            "siblings": Array [
              "label/8",
              "label/5",
            ],
          },
          "label/5" => Object {
            "color": "#ff0022",
          },
        },
      },
    },
  },
]
`;

exports[`configurations multiple_aliases.yml on FREE 1`] = `
Array [
  null,
  Object {
    "repos": Map {
      "repo-one" => Object {
        "labels": Map {
          "label/1" => Object {
            "alias": Array [
              "alias",
              "two",
            ],
            "color": "#ff0022",
          },
          "label/2" => Object {
            "color": "#ff0022",
          },
          "label/3" => Object {
            "color": "#ff0022",
          },
        },
      },
      "repo-two" => Object {
        "labels": Map {
          "label/4" => Object {
            "alias": Array [
              "alias",
            ],
            "color": "#ff0022",
          },
        },
      },
    },
  },
]
`;

exports[`configurations multiple_aliases.yml on PAID 1`] = `
Array [
  null,
  Object {
    "repos": Map {
      "repo-one" => Object {
        "labels": Map {
          "label/1" => Object {
            "alias": Array [
              "alias",
              "two",
            ],
            "color": "#ff0022",
          },
          "label/2" => Object {
            "color": "#ff0022",
          },
          "label/3" => Object {
            "color": "#ff0022",
          },
        },
      },
      "repo-two" => Object {
        "labels": Map {
          "label/4" => Object {
            "alias": Array [
              "alias",
            ],
            "color": "#ff0022",
          },
        },
      },
    },
  },
]
`;

exports[`configurations new.yml on FREE 1`] = `
Array [
  null,
  Object {
    "repos": Map {
      "newrepo" => Object {
        "config": Object {
          "removeUnconfiguredLabels": true,
        },
        "labels": Map {
          "bug/0-needs-reproduction" => Object {
            "color": "#ff0022",
          },
          "bug/1-has-reproduction" => Object {
            "color": "#ff0022",
            "description": "Indicates that an issue has reproduction",
          },
          "bug/2-bug-confirmed" => Object {
            "color": "red",
          },
          "bug/3-fixing" => Object {
            "color": "00ff22",
            "description": "Indicates that we are working on fixing the issue.",
          },
        },
      },
    },
  },
]
`;

exports[`configurations new.yml on PAID 1`] = `
Array [
  null,
  Object {
    "repos": Map {
      "newrepo" => Object {
        "config": Object {
          "removeUnconfiguredLabels": true,
        },
        "labels": Map {
          "bug/0-needs-reproduction" => Object {
            "color": "#ff0022",
          },
          "bug/1-has-reproduction" => Object {
            "color": "#ff0022",
            "description": "Indicates that an issue has reproduction",
          },
          "bug/2-bug-confirmed" => Object {
            "color": "red",
          },
          "bug/3-fixing" => Object {
            "color": "00ff22",
            "description": "Indicates that we are working on fixing the issue.",
          },
        },
      },
    },
  },
]
`;

exports[`configurations siblings.yml on FREE 1`] = `
Array [
  null,
  Object {
    "repos": Map {
      "changed" => Object {
        "config": Object {
          "removeUnconfiguredLabels": true,
        },
        "labels": Map {
          "label/siblings" => Object {
            "color": "000000",
            "siblings": Array [
              "label/regular",
            ],
          },
          "label/regular" => Object {
            "color": "000000",
          },
        },
      },
    },
  },
]
`;

exports[`configurations siblings.yml on PAID 1`] = `
Array [
  null,
  Object {
    "repos": Map {
      "changed" => Object {
        "config": Object {
          "removeUnconfiguredLabels": true,
        },
        "labels": Map {
          "label/siblings" => Object {
            "color": "000000",
            "siblings": Array [
              "label/regular",
            ],
          },
          "label/regular" => Object {
            "color": "000000",
          },
        },
      },
    },
  },
]
`;

exports[`configurations wildcard.yml on FREE 1`] = `
Array [
  null,
  Object {
    "repos": Map {
      "*" => Object {
        "config": Object {
          "removeUnconfiguredLabels": true,
        },
        "labels": Map {
          "bug/0-needs-reproduction" => Object {
            "color": "#ff0022",
          },
          "bug/1-has-reproduction" => Object {
            "color": "#ff0022",
            "description": "Indicates that an issue has reproduction",
          },
          "bug/2-bug-confirmed" => Object {
            "color": "red",
          },
          "bug/3-fixing" => Object {
            "color": "00ff22",
            "description": "Indicates that we are working on fixing the issue.",
          },
        },
      },
      "prisma-test-utils" => Object {
        "config": Object {
          "removeUnconfiguredLabels": true,
        },
        "labels": Map {
          "bug/0-needs-reproduction" => Object {
            "color": "#ff0022",
          },
          "bug/1-has-reproduction" => Object {
            "color": "#ff0022",
            "description": "Indicates that an issue has reproduction",
          },
        },
      },
    },
  },
]
`;

exports[`configurations wildcard.yml on PAID 1`] = `
Array [
  null,
  Object {
    "repos": Map {
      "*" => Object {
        "config": Object {
          "removeUnconfiguredLabels": true,
        },
        "labels": Map {
          "bug/0-needs-reproduction" => Object {
            "color": "#ff0022",
          },
          "bug/1-has-reproduction" => Object {
            "color": "#ff0022",
            "description": "Indicates that an issue has reproduction",
          },
          "bug/2-bug-confirmed" => Object {
            "color": "red",
          },
          "bug/3-fixing" => Object {
            "color": "00ff22",
            "description": "Indicates that we are working on fixing the issue.",
          },
        },
      },
      "prisma-test-utils" => Object {
        "config": Object {
          "removeUnconfiguredLabels": true,
        },
        "labels": Map {
          "bug/0-needs-reproduction" => Object {
            "color": "#ff0022",
          },
          "bug/1-has-reproduction" => Object {
            "color": "#ff0022",
            "description": "Indicates that an issue has reproduction",
          },
        },
      },
    },
  },
]
`;
